--- a/style.css
+++ b/style.css
@@ -79,10 +79,10 @@ body {
   
   .card-content h1 {
     color: white;
-    font-weight: bolder;
-    line-height: .9;
+    font-weight: bold;
+    line-height: 1;
     margin: 20px 0;
-    font-size: 2.3rem;
+    font-size: 1.9rem;
     text-align: center;
     font-family: 'Inter', sans-serif;
   }
